# Quantum-Type-3-Fuzzy-Inference-System

./: CITATION.cff  LICENSE  README.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/01_inverted_pendulum/: README.md  run_qt3_inverted_pendulum.py
benchmarks/02_particle_accelerator_beam_c2/: README.md  run_qt3_particle_accelerator_c2.py
benchmarks/03_cart_pole/: README.md  run_qt3_cart_pole.py
benchmarks/04_eleven_story_building_atmd/: README.md  run_qt3_eleven_story_atmd.py
data/: README.md
docs/: HOW_TO_RELEASE_GITHUB_ZENODO.md  METHOD_SUMMARY.md  PROVENANCE.md
src/qt3fis/: __init__.py  qt3_core.py
